force-app/main/default/objects/PDRI__VCS_Pull_Request__c/fields/PDRI__Platform__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Platform__c</fullName>
    <label>Platform</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GitHub Cloud</fullName>
            </value>
            <value>
                <fullName>GitHub Enterprise Server</fullName>
            </value>
            <value>
                <fullName>Bitbucket Cloud</fullName>
            </value>
            <value>
                <fullName>Bitbucket Server</fullName>
            </value>
            <value>
                <fullName>Azure Cloud</fullName>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>